@@ -1,3 +1,9 @@
+2018-02-01  Richard Sandiford  <richard.sandiford@linaro.org>
+
+	PR tearget/83845
+	* config/aarch64/aarch64.c (aarch64_secondary_reload): Tighten
+	check for operands that need to go through aarch64_sve_reload_be.
+
 2018-02-01  Jakub Jelinek  <jakub@redhat.com>
 
 	PR tree-optimization/81661
